--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -670,7 +670,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "id": "fd52c177-396d-4a84-bd19-99462f206e73",
       "metadata": {
         "colab": {
@@ -732,7 +732,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 6,
       "id": "4459f6b1-acb3-4073-84fb-9d6c59c3a0c1",
       "metadata": {
         "id": "4459f6b1-acb3-4073-84fb-9d6c59c3a0c1"
@@ -753,7 +753,7 @@
         "\n",
         "\"\"\"\n",
         "\n",
-        "class Matrix(object):\n",
+        "class Matrix:\n",
         "    def __init__(self, value=None, dim=(1, 1)):\n",
         "        if value is None:\n",
         "            self.value = [[1 for _ in range(dim[1])] for _ in range(dim[0])]\n",
