--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -732,7 +732,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 2,
       "id": "4459f6b1-acb3-4073-84fb-9d6c59c3a0c1",
       "metadata": {
         "id": "4459f6b1-acb3-4073-84fb-9d6c59c3a0c1"
@@ -753,43 +753,56 @@
         "\n",
         "\"\"\"\n",
         "\n",
-        "class Matrix:\n",
-        "    def __init__(self, value=None, dim=(1, 1)):\n",
+        "class Matrix(object):\n",
+        "    \"\"\"\n",
+        "    Read the matrix and store as part of the class object\n",
+        "    \"\"\"\n",
+        "    def __init__(self, value=None, dim=(1,1)):\n",
         "        if value is None:\n",
-        "            self.value = [[1 for _ in range(dim[1])] for _ in range(dim[0])]\n",
-        "            self.shape = dim\n",
-        "        elif isinstance(value, list):\n",
+        "            value = []\n",
+        "        if isinstance(value, list):\n",
         "            if len(value) > 0:\n",
+        "                # Check if it's a vector (list of numbers) or a matrix (list of lists)\n",
         "                if isinstance(value[0], (int, float)):\n",
-        "                    for i in value:\n",
-        "                        if not isinstance(i, (int, float)):\n",
-        "                            raise RuntimeError(\"Matrix is invalid. All elements must be numeric (int or float).\")\n",
-        "                    self.value = [value]\n",
-        "                    self.shape = (1, len(value))\n",
+        "                    row_type = (int, float)\n",
         "                elif isinstance(value[0], list):\n",
-        "                    row_len = len(value[0])\n",
-        "                    for row in value:\n",
-        "                        if len(row) != row_len:\n",
-        "                            raise RuntimeError(\"Matrix is invalid. All rows must have the same length.\")\n",
-        "                        for element in row:\n",
-        "                            if not isinstance(element, (int, float)):\n",
-        "                                raise RuntimeError(\"Matrix is invalid. All elements must be numeric (int or float).\")\n",
-        "                    self.value = value\n",
-        "                    self.shape = (len(value), len(value[0]))\n",
+        "                    row_type = list\n",
         "                else:\n",
-        "                    raise RuntimeError(\"Matrix is invalid. First element must be a number or list.\")\n",
+        "                    raise RuntimeError(\"Matrix is invalid. Please ensure that all elements share a type.\")\n",
+        "\n",
+        "                # Check that all elements match the row_type\n",
+        "                for i in value:\n",
+        "                    if not isinstance(i, row_type):\n",
+        "                        raise RuntimeError(\"Matrix is invalid. Please ensure that all elements share a type.\")\n",
+        "\n",
+        "                if row_type is list:\n",
+        "                    len_inner = len(value[0])\n",
+        "                    for i in value:\n",
+        "                        if len(i) != len_inner:\n",
+        "                            raise RuntimeError(\"Matrix is invalid. Please ensure that all rows have uniform length.\")\n",
+        "                        for j in i:\n",
+        "                            if not isinstance(j, (int, float)):\n",
+        "                                raise RuntimeError(\"Matrix is invalid. Please ensure that all elements are numeric (either float or int).\")\n",
+        "                self.value = value\n",
+        "                try:\n",
+        "                    self.shape = (len(value), len(value[0]))\n",
+        "                except:\n",
+        "                    self.shape = (len(value), 1)\n",
         "            else:\n",
-        "                raise RuntimeError(\"Matrix is invalid. List cannot be empty.\")\n",
-        "        else:\n",
-        "            raise RuntimeError(\"Matrix is invalid. Input value must be a list.\")\n",
+        "                # Create a matrix of ones based on dimensions if no value is provided\n",
+        "                matrix = []\n",
+        "                for i in range(dim[0]):\n",
+        "                    row = [1] * dim[1]\n",
+        "                    matrix.append(row)\n",
+        "                self.value = matrix\n",
+        "                self.shape = dim\n",
         "\n",
         "    def __repr__(self):\n",
-        "        string = \"\"\n",
-        "        for row in self.value:\n",
-        "            string += \"[ \" + \" \".join(map(str, row)) + \" ]\\n\"\n",
-        "        return string\n",
-        "\n",
-        "\n"
+        "        string = \"  \"  # Start with two spaces of indentation\n",
+        "        for i in range(self.shape[0]):\n",
+        "            string += \"[ \"\n",
+        "            string += \" \".join(str(self.value[i][j]) for j in range(self.shape[1])) + \" ]\\n  \"\n",
+        "        return string.rstrip() + \"\\n\\n\"  # Ensure the final string has a newline\n"
       ]
     }
   ],
